# libasdf-gwcs

./: .gitignore  .gitmodules  CHANGES.rst  CMakeLists.txt  LICENSE  Makefile.am  README.rst  autogen.sh  config.h.cmake  configure.ac  libasdf-gwcs.pc.in  towncrier.toml
.github/workflows/: build.yml  cmake.yml
cmake/: ASDFGWCSOptions.cmake  AddressAnalyzer.cmake  SubmoduleInit.cmake
include/: CMakeLists.txt  Makefile.am
include/asdf/gwcs/: backend.h  core.h  eval.h  fitswcs_imaging.h  gwcs.h  step.h  transform.h
include/asdf/gwcs/transform/: affine.h  compose.h  concatenate.h  constant.h  divide.h  identity.h  polynomial.h  remap_axes.h  rotate_sequence_3d.h  scale.h  shift.h  spherical_cartesian.h  transform.h
include/asdf/gwcs/transform/property/: bounding_box.h
include/asdf/gwcs/transforms/: affine.h  compose.h  concatenate.h  constant.h  divide.h  identity.h  polynomial.h  remap_axes.h  rotate_sequence_3d.h  scale.h  shift.h  spherical_cartesian.h
m4/: ax_submodule_init.m4
src/: CMakeLists.txt  backend.c  backend.h  eval.c  eval.h  fitswcs_imaging.c  fitswcs_imaging.h  frame.c  frame.h  frame2d.c  frame_celestial.c  gwcs.h  step.c  step.h  transform.c  transform.h  util.h  wcs.c
src/backends/: ast_yaml.c
src/transform/: affine.c  affine.h  compose.c  compose.h  concatenate.c  concatenate.h  constant.c  constant.h  divide.c  divide.h  identity.c  identity.h  polynomial.c  polynomial.h  remap_axes.c  remap_axes.h  rotate_sequence_3d.c  rotate_sequence_3d.h  scale.c  scale.h  shift.c  shift.h  spherical_cartesian.c  spherical_cartesian.h  transform.c  transform.h
src/transform/property/: bounding_box.c
src/transforms/: affine.c  affine.h  compose.c  compose.h  concatenate.c  concatenate.h  constant.c  constant.h  divide.c  divide.h  identity.c  identity.h  polynomial.c  polynomial.h  remap_axes.c  remap_axes.h  rotate_sequence_3d.c  rotate_sequence_3d.h  scale.h  shift.c  shift.h  spherical_cartesian.h
src/transforms/property/: bounding_box.c
src/types/: asdf_gwcs_backend_map.h  asdf_gwcs_transform_map.h
tests/: CMakeLists.txt  Makefile.am  test-gwcs-eval.c  test-gwcs.c
tests/fixtures/: roman_l2_wcs.asdf
tests/scripts/: create_roman_fixture.py
utils/roman/: .gitignore  Makefile  README.md  compare_wcs.py  prepare_roman_yaml.py  roman_wcs_ast.c  roman_wcs_gwcs.py
utils/roman/.data/build21/: README.md  ast_wcs_results.csv  gwcs_wcs_results.csv  wcs_comparison_summary.txt
